# object_detection_rgbd

./: .gitignore  .pre-commit-config.yaml  README.md  package.xml  requirements.txt  setup.cfg  setup.py
launch/: compressed_od.launch.py  object_detection.launch.py
object_detection_rgbd/config/: coco_classes_with_colors.py
object_detection_rgbd/models/: base_model.py  hf_model.py  model_factory.py  yolov5_model.py
object_detection_rgbd/nodes/: object_detection_node.py
object_detection_rgbd/processors/: base_processor.py  depth_processor.py
object_detection_rgbd/utils/: pointcloud.py  visualization.py
